--- a/_config.yml
+++ b/_config.yml
@@ -3,11 +3,11 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Hexo
+title: Ax
 subtitle:
 description:
-author: John Doe
-language:
+author:
+language: zh-Hans
 timezone:
 
 # URL
